src/task/cluster/host/snapshots/genin__task__cluster__host__test__hosts_v2_print_table.snap
---
source: src/task/cluster/host/test.rs
assertion_line: 626
expression: uncolorize(host)
---
+-------------+-------------+--------------+--------------+--------------+--------------+--------------+--------------+
|                                                       Cluster                                                       |
+-------------+-------------+--------------+--------------+--------------+--------------+--------------+--------------+
|                           DC1                           |                            DC2                            |
+-------------+-------------+--------------+--------------+--------------+--------------+--------------+--------------+
|           Rack1           |            Rack2            |            Rack1            |            Rack2            |
+-------------+-------------+--------------+--------------+--------------+--------------+--------------+--------------+
|  Server-1   |  Server-2   |   Server-3   |   Server-4   |   Server-5   |   Server-6   |   Server-7   |   Server-8   |
+-------------+-------------+--------------+--------------+--------------+--------------+--------------+--------------+
|  router-1   |  router-5   |  router-3    |  router-7    | router-2     | router-6     | router-4     | router-8     |
|  8081/3031  |  8081/3031  |  8081/3031   |  8081/3031   | 25000/26000  | 25000/26000  | 25000/26000  | 25000/26000  |
+-------------+-------------+--------------+--------------+--------------+--------------+--------------+--------------+
| storage-1-1 | storage-1-5 | storage-1-3  | storage-1-7  | storage-1-2  | storage-1-6  | storage-1-4  | storage-1-8  |
| 8082/3032   | 8082/3032   | 8082/3032    | 8082/3032    | 25001/26001  | 25001/26001  | 25001/26001  | 25001/26001  |
+-------------+-------------+--------------+--------------+--------------+--------------+--------------+--------------+
| storage-1-9 | storage-2-1 | storage-1-11 | storage-2-3  | storage-1-10 | storage-2-2  | storage-1-12 | storage-2-4  |
| 8083/3033   | 8083/3033   | 8083/3033    | 8083/3033    | 25002/26002  | 25002/26002  | 25002/26002  | 25002/26002  |
+-------------+-------------+--------------+--------------+--------------+--------------+--------------+--------------+
| storage-2-5 | storage-2-9 | storage-2-7  | storage-2-11 | storage-2-6  | storage-2-10 | storage-2-8  | storage-2-12 |
| 8084/3034   | 8084/3034   | 8084/3034    | 8084/3034    | 25003/26003  | 25003/26003  | 25003/26003  | 25003/26003  |
+-------------+-------------+--------------+--------------+--------------+--------------+--------------+--------------+
| storage-3-1 | storage-3-5 | storage-3-3  | storage-3-7  | storage-3-2  | storage-3-6  | storage-3-4  | storage-3-8  |
| 8085/3035   | 8085/3035   | 8085/3035    | 8085/3035    | 25004/26004  | 25004/26004  | 25004/26004  | 25004/26004  |
+-------------+-------------+--------------+--------------+--------------+--------------+--------------+--------------+
| storage-3-9 |             | storage-3-11 |              | storage-3-10 |              | storage-3-12 |              |
| 8086/3036   |             | 8086/3036    |              | 25005/26005  |              | 25005/26005  |              |
+-------------+-------------+--------------+--------------+--------------+--------------+--------------+--------------+
